k8s/glance/app/pod-monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-k8s
  namespace: glance
  labels:
    app: glance-k8s
  annotations:
    glance/hide: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance-k8s
  template:
    metadata:
      labels:
        app: glance-k8s
    spec:
      serviceAccountName: glance-k8s
      containers:
        - name: glance-k8s
          # renovate: changelogUrl=https://github.com/lukasdietrich/glance-k8s/releases
          image: ghcr.io/lukasdietrich/glance-k8s/glance-k8s:v0.4.7@sha256:4ff785aa8d33d9bd065f1f66cb1c9d4eedd7c0793af07f2bebfb22889f0b07ee
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
              cpu: "100m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
---
apiVersion: v1
kind: Service
metadata:
  name: glance-k8s
  namespace: glance
  labels:
    app: glance-k8s
spec:
  selector:
    app: glance-k8s
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
