k8s/glance/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-ingressroute
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.home.coredev.uk`)
      kind: Rule
      services:
        - name: glance
          port: 8080
  tls:
    secretName: glance-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-redirect
  namespace: glance
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`glance.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: glance
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: glance
spec:
  redirectScheme:
    scheme: https
    permanent: true
